# TianLi.TruthEye

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-window-platform.yml
Test/c/: CMakeLists.txt  main.cpp
Test/csharp/: CMakeLists.txt  Program.cs
TianLi.TruthEye/: CMakeLists.txt  TianLi.TruthEye.cpp  TianLi.TruthEye.h
TianLi.TruthEye.Test/: CMakeLists.txt  TianLi.TruthEye.Test.cpp  TianLi.TruthEye.Test.h
TianLi.TruthEye/include/: TianLi.TruthEye.Impl.cs  TianLi.TruthEye.cs  TianLi.TruthEye.h
TianLi.TruthEye/inface/: CMakeLists.txt  TianLi.TruthEye.Inface.cpp
TianLi.TruthEye/source/: TianLi.TruthEye.cpp  impl.version.rc.in
TianLi.TruthEye/source/form/: te.popup.window.cpp  te.popup.window.h
TianLi.TruthEye/src/form/: te.popup.window.cpp  te.popup.window.h
dependent_party/meojson/include/meojson/: json.hpp
source/: CMakeLists.txt  TianLi.TruthEye.cpp
source/form/: te.popup.window.cpp  te.popup.window.h
